Sun Oct 24 02:56:43 2004  Jonathan Blandford  <jrb@redhat.com>

	* docs/tools/widgets.c: Update GtkFileChooserButton doc shot.

2004-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c: Use the new g_key_file api in GLib.

	* gtk/Makefile.am (gtk_c_sources): Remove gtkiconthemeparser.[hc]

	* gtk/gtkiconthemeparser.[hc]: Removed.

	* gtk/gtkfilechooserdefault.c (location_popup_handler): If the
	location dialog is brought up by typing '/', insert the slash
	in the entry.  (#155370, Warren Togami)

2004-10-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (tree_view_keybinding_cb) 
	(trap_activate_cb): Accept shift-/ for bringing up the location
	popup, since German and French keyboards generate such 
	events.  (#154163, Frederic Crozat)

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Invalidate 
	the window if the tree is empty, to avoid resizing artifacts
	from the focus rectangle.  (#155881, Vincent Noel, patch by
	Billy Biggs)	

Sat Oct 23 16:14:37 2004  Søren Sandmann  <sandmann@redhat.com>
tkIconThemeFile
	* gtk/gtksequence.c (_gtk_sequence_node_insert_sorted): Remove
	assertion that can get triggered by broken sort functions.

Sat Oct 23 16:07:46 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtksequence.c (_gtk_sequence_swap): Replace broken, overly
	clever implementation with one that works.
	
	* gtk/gtkliststore.c (gtk_list_store_swap): emit "rows_reordered"
	instead of "changed" twice.

	Bug 153479

Sat Oct 23 15:17:55 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenutoolbutton.c (button_state_changed_cb): Remove check
	for previous state being ACTIVE. Bug 153876.

2004-10-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_drag_data_received) 
	(gtk_file_chooser_button_init): Use the new file DND api.

	* gtk/gtkdnd.h:
	* gtk/gtkdnd.c (gtk_drag_dest_add_uri_targets) 
	(gtk_drag_source_add_uri_targets): 

	* gtk/gtkselection.h: