@@ -1,3 +1,9 @@
+2004-10-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcellrenderercombo.c: Use G_DEFINE_TYPE, intialize the
+	has_entry property, ref the model and add a finalizer.  (#156325,
+	Olivier Andrieu)
+	
 Sun Oct 24 02:56:43 2004  Jonathan Blandford  <jrb@redhat.com>
 
 	* docs/tools/widgets.c: Update GtkFileChooserButton doc shot.
